Edited translation jsons

--- a/src/assets/i18n/bn-IN.json
+++ b/src/assets/i18n/bn-IN.json
@@ -27,5 +27,39 @@
     "about.modelling.para1": "সংগৃহীত ডেটা সংকেত প্রক্রিয়াজাতকরণ এবং মেশিন লার্নিং কৌশল ব্যবহার করে বিশ্লেষণ করা হবে। লক্ষ্য গাণিতিক মডেল ভয়েস নমুনা থেকে সংক্রমণ কপি করে প্রিন্ট-এর সনাক্তকরণ প্রতিপোষক নির্মাণ করা হয়। আমরা যখন ডেটা সেটটি তৈরি এই পর্যায়ে একটি কাজ-ইন-উন্নতি হয়।",
     "about.modelling.para2": "আমরা খোলাখুলিভাবে একটি গিটহাব প্ল্যাটফর্ম মাধ্যমে একটি কাঠামোবদ্ধ আকারে সংগৃহীত ডেটা সেটটি মুক্তি Taiwan। এই বড় গবেষণা সম্প্রদায় একটি বাস্তবতা শীঘ্রই পয়েন্ট অফ যত্ন নির্ণয়ের তৈরীর অবদান থেকে পুকুর প্রচেষ্টা হয়।",
     "about.tool.para1": "আমরা একটি ওয়েব / মোবাইল অ্যাপ্লিকেশন যেমন নির্ণয়ের টুল মুক্তি লক্ষ্য রাখি। ডেটা সেটটি সৃষ্টি পর্যায় অনুরূপ, ভয়েস নমুনা রেকর্ডিং, এবং বিশেষ করে আবেদন অনুরোধ একটি স্কোর COVID -19 সংক্রমণের সম্ভাবনা ইঙ্গিত প্রদান করে। টুল চূড়ান্ত স্থাপনার নিদানিক সঙ্গে বৈধতা, এবং অনুমোদন / উপযুক্ত কর্তৃপক্ষের কাছ থেকে অনুমোদন সাপেক্ষে।",
-    "about.tool.para2": "এই রোগ নির্ণয় পদ্ধতির অত্যন্ত সরল এবং খরচ কার্যকর প্রকৃতি প্রদত্ত, আমরা প্রকল্প রচনা করা যে এমনকি টুল একটি আংশিক সাফল্য পৃথিবীব্যাপি জন্য নির্ণয়ের একটি প্রথম লাইন হিসেবে বিশাল সংখ্যক কর্মী নিয়োগ সক্ষম হবে। সম্ভাব্য ডায়গনিস্টিক সরঞ্জাম রাসায়নিক পরীক্ষার প্রতিস্থাপিত করবে না নিছক কিন্তু বিদ্যমান পরীক্ষণ পদ্ধতি সম্পূরক।"
+    "about.tool.para2": "এই রোগ নির্ণয় পদ্ধতির অত্যন্ত সরল এবং খরচ কার্যকর প্রকৃতি প্রদত্ত, আমরা প্রকল্প রচনা করা যে এমনকি টুল একটি আংশিক সাফল্য পৃথিবীব্যাপি জন্য নির্ণয়ের একটি প্রথম লাইন হিসেবে বিশাল সংখ্যক কর্মী নিয়োগ সক্ষম হবে। সম্ভাব্য ডায়গনিস্টিক সরঞ্জাম রাসায়নিক পরীক্ষার প্রতিস্থাপিত করবে না নিছক কিন্তু বিদ্যমান পরীক্ষণ পদ্ধতি সম্পূরক।",
+    "media.title": "খবরে",
+    "media.content": "আমরা আমাদের গবেষণা প্রচার এবং ইতিবাচক তথ্য সংগ্রহ অবদান মিডিয়া এর সাহায্য তারিফ করা।",
+    "team.title": "দল দেখা",
+    "name.sriram": "ডাঃ শ্রীরাম গণপতি",
+    "name.pkg": "ডাঃ প্রশান্ত কুমার ঘোষ",
+    "name.anand": "আনন্দ মোহন",
+    "name.anuroop": "Anuroop Iyengar",
+    "name.neeraj": "ডাঃ নীরজ শর্মা",
+    "name.prashant": "প্রশান্ত কৃষ্ণান",
+    "name.nirmala": "ডাঃ আর নির্মলা",
+    "name.raksheet": "Raksheet ভাট",
+    "name.shahbaz": "শাহবাজ সুলতান",
+    "name.shreyas": "Shreyas Ramoji",
+    "name.srikanth": "Srikanth রাজ Chetupalli",
+    "place.iisc": "IISc বেঙ্গালুরু",
+    "place.cmu": "CMU মার্কিন যুক্তরাষ্ট্র",
+    "place.cogknit": "Cogknit শব্দার্থিক",
+    "place.upgrad": "upGrad",
+    "team.title.asst_prof": "সহকারী অধ্যাপক",
+    "team.title.assoc_prof": "সহযোগী অধ্যাপক",
+    "team.title.ceo": "সিইও",
+    "team.title.ra": "গবেষণা সহকারী",
+    "team.title.mtech_ai": "MTech (কৃত্রিম বুদ্ধিমত্তা)",
+    "team.title.post_doc": "পোস্ট ডক্টোরাল ফেলো",
+    "team.title.mo": "মেডিকেল অফিসার",
+    "team.title.sde": "সফটওয়্যার ইঞ্জিনিয়ার",
+    "team.title.phd": "পিএইচডি স্কলার",
+    "team.areas.sriram": "ভাষ্য সনাক্তকরণটিতে, ডিপ লার্নিং, স্নায়ুবিজ্ঞান",
+    "team.areas.pkg": "স্পিচ উত্পাদনের, স্পষ্ট উচ্চারণ, স্পিচ ডিসঅর্ডারস",
+    "team.areas.anand": "কন্ঠ সনান্তকরণ",
+    "team.areas.neeraj": "শ্রাবণ স্নায়ুবিজ্ঞান, সিগন্যাল প্রসেসিং",
+    "team.areas.prashant": "স্পিকার স্বীকৃতি",
+    "team.areas.shreyas": "স্পিকার স্বীকৃতি, মেশিন লার্নিং",
+    "team.areas.srikanth": "সিগন্যাল প্রসেসিং, কথন শনাক্তকরণ"
 }
