--- a/src/assets/i18n/hi-IN.json
+++ b/src/assets/i18n/hi-IN.json
@@ -11,7 +11,7 @@
 	"language.bengali": "বাংলা",
 	"home.button.read": "अधिक पढ़ें",
 	"home.button.record": "आगे बढ़ने के लिए डेटा की रिकॉर्डिंग",
-	"home.content": "<a href=\"https://www.iisc.ac.in\" target=\"_blank\"> भारतीय विज्ञान संस्थान द्वारा परियोजना Coswara (आईआईएससी) बंगलौर </a> Covid -19 के लिए एक नैदानिक उपकरण का निर्माण करने का प्रयास है श्वसन, खाँसी और भाषण ध्वनियों पर आधारित है। परियोजना अब डेटा संग्रह चरण में है। यह प्रतिभागियों सांस लेने लगता है, खांसी लगता है, स्वर लगता है की निरंतर स्वर निर्माण और एक गिनती व्यायाम जो अपने समय के 5-7 मिनट लगते हैं की एक रिकॉर्डिंग उपलब्ध कराने के लिए की आवश्यकता है। कोई व्यक्तिगत पहचान डेटा प्रतिभागियों से एकत्र किया जाता है।",
+	"home.content": "<a href=\"https://www.iisc.ac.in\" target=\"_blank\"> भारतीय विज्ञान संस्थान द्वारा परियोजना Coswara (आईआईएससी) बंगलौर </a> Covid -19 के लिए एक नैदानिक \u200b\u200bउपकरण का निर्माण करने का प्रयास है श्वसन, खाँसी और भाषण ध्वनियों पर आधारित है। परियोजना अब डेटा संग्रह चरण में है। यह प्रतिभागियों सांस लेने लगता है, खांसी लगता है, स्वर लगता है की निरंतर स्वर निर्माण और एक गिनती व्यायाम जो अपने समय के 5-7 मिनट लगते हैं की एक रिकॉर्डिंग उपलब्ध कराने के लिए की आवश्यकता है। कोई व्यक्तिगत पहचान डेटा प्रतिभागियों से एकत्र किया जाता है।",
 	"tabs.about": "के बारे में",
 	"tabs.faq": "सामान्य प्रश्न",
 	"tabs.home": "घर",
@@ -21,11 +21,45 @@
 	"about.para1": "शब्द <b> Coswara </ b> सह (कोरोना से) और Swara (संस्कृत में ध्वनि) की एक समामेलन है। परियोजना तीन चरणों में आगे बढ़ाया जा रहा है:",
 	"about.subtitle.data_collection": "आंकड़ा संग्रहण",
 	"about.subtitle.modelling": "मोडलिंग",
-	"about.subtitle.tool": "नैदानिक उपकरण",
+	"about.subtitle.tool": "नैदानिक \u200b\u200bउपकरण",
 	"about.data.para1": "हम स्वस्थ व्यक्तियों से आवाज के नमूने से बना एक डाटासेट बनाने का उद्देश्य है, और COVID -19 संक्रमण के साथ उन। डेटा एक वेब और मोबाइल अनुप्रयोग का उपयोग एकत्र किया जाता है। एकत्र आवाज़ के नमूने (तेज और धीमी गति) साँस लेने लगता है, खांसी ध्वनियों (गहरी और उथले), निरंतर स्वर की स्वर निर्माण (/ एक / में के रूप में बनाया, / मैं /, / ओ /) शामिल हैं धीमी गति से और तेजी से, और गिनती संख्या। एकत्र मेटाडाटा जानकारी प्रतिभागी का आयु, लिंग, स्थान (देश, राज्य / प्रांत), वर्तमान स्वास्थ्य की स्थिति भी शामिल है (स्वस्थ / उजागर / ठीक हो / संक्रमित) और comorbidities (पूर्व मौजूदा चिकित्सा शर्तों) की उपस्थिति।",
 	"about.data.para2": "कोई व्यक्तिगत पहचान वाली जानकारी एकत्र किया जाता है, और डेटा संग्रह योगदानकर्ताओं की गोपनीयता का सम्मान। डेटा भी भंडारण के दौरान ही अनाम रखी जाती है। सभी एकत्र किए गए आंकड़ों उपलब्ध href=\"https://github.com/iiscleap/Coswara-Data\"> <a यहां एक दैनिक आधार पर </a> अपडेट नहीं होगा।",
-	"about.modelling.para1" : "एकत्र किए गए आंकड़ों सिग्नल प्रोसेसिंग और मशीन लर्निंग तकनीक का उपयोग विश्लेषण किया जाएगा। लक्ष्य गणितीय मॉडल आवाज के नमूनों से \"संक्रमण प्रिंट\" की पहचान सहायता का निर्माण करना है। जब तक हम डाटासेट बनाने के इस चरण में एक काम में प्रगति है।",
+	"about.modelling.para1": "एकत्र किए गए आंकड़ों सिग्नल प्रोसेसिंग और मशीन लर्निंग तकनीक का उपयोग विश्लेषण किया जाएगा। लक्ष्य गणितीय मॉडल आवाज के नमूनों से "संक्रमण प्रिंट" की पहचान सहायता का निर्माण करना है। जब तक हम डाटासेट बनाने के इस चरण में एक काम में प्रगति है।",
 	"about.modelling.para2": "हम यह भी खुले तौर पर एक Github मंच के माध्यम से एक संरचित रूप में एकत्र डाटासेट जारी करना है। यह बड़ा अनुसंधान समुदाय एक वास्तविकता जल्द ही बिंदु देखभाल निदान करने में योगदान करने के लिए से पूल प्रयास करने के लिए है।",
-	"about.tool.para1": "हम एक वेब / मोबाइल आवेदन के रूप में निदान उपकरण जारी करने के लिए करना है। डाटासेट निर्माण चरण के समान है, आवाज के नमूने की रिकॉर्डिंग, और अधिमानतः के लिए आवेदन अनुरोध स्कोर COVID -19 संक्रमण की संभावना का संकेत देता है। उपकरण के अंतिम तैनाती नैदानिकनिष्कर्षों के साथ सत्यापन, और प्राधिकरण / सक्षम प्राधिकारियों से अनुमोदन के अधीन है।",
-	"about.tool.para2": "इस निदान दृष्टिकोण का अत्यधिक सरलीकृत और लागत प्रभावी प्रकृति को देखते हुए, हम परिकल्पना है कि उपकरण की एक आंशिक सफलता महामारी के लिए निदान की पहली पंक्ति के रूप में एक बड़े पैमाने पर तैनाती के लिए सक्षम होगा। संभावित नैदानिक उपकरण रासायनिक परीक्षण की जगह नहीं होगी लेकिन केवल मौजूदा परीक्षण तरीकों के पूरक।"
+	"about.tool.para1": "हम एक वेब / मोबाइल आवेदन के रूप में निदान उपकरण जारी करने के लिए करना है। डाटासेट निर्माण चरण के समान है, आवाज के नमूने की रिकॉर्डिंग, और अधिमानतः के लिए आवेदन अनुरोध स्कोर COVID -19 संक्रमण की संभावना का संकेत देता है। उपकरण के अंतिम तैनाती नैदानिक \u200b\u200bनिष्कर्षों के साथ सत्यापन, और प्राधिकरण / सक्षम प्राधिकारियों से अनुमोदन के अधीन है।",
+	"about.tool.para2": "इस निदान दृष्टिकोण का अत्यधिक सरलीकृत और लागत प्रभावी प्रकृति को देखते हुए, हम परिकल्पना है कि उपकरण की एक आंशिक सफलता महामारी के लिए निदान की पहली पंक्ति के रूप में एक बड़े पैमाने पर तैनाती के लिए सक्षम होगा। संभावित नैदानिक \u200b\u200bउपकरण रासायनिक परीक्षण की जगह नहीं होगी लेकिन केवल मौजूदा परीक्षण तरीकों के पूरक।",
+	"media.title": "खबर में",
+	"media.content": "हम अपने अनुसंधान को बढ़ावा देने और सकारात्मक डेटा संग्रह में योगदान करने के लिए मीडिया की मदद की सराहना करते हैं।",
+	"team.title": "टीम से मिलो",
+	"name.sriram": "डॉ श्रीराम गणपति",
+	"name.pkg": "डॉ प्रशांत कुमार घोष",
+	"name.anand": "आनंद मोहन",
+	"name.anuroop": "Anuroop आयंगर",
+	"name.neeraj": "डॉ नीरज शर्मा",
+	"name.prashant": "प्रशांत कृष्णन",
+	"name.nirmala": "डॉ आर निर्मला",
+	"name.raksheet": "Raksheet भट्ट",
+	"name.shahbaz": "शाहबाज सुल्तान",
+	"name.shreyas": "श्रेयस रामोजी",
+	"name.srikanth": "श्रीकांत राज Chetupalli",
+	"place.iisc": "आईआईएससी बैंगलोर",
+	"place.cmu": "CMU, संयुक्त राज्य अमेरिका",
+	"place.cogknit": "Cogknit शब्दार्थ",
+	"place.upgrad": "upgrad",
+	"team.title.asst_prof": "सहेयक प्रोफेसर",
+	"team.title.assoc_prof": "सह - आचार्य",
+	"team.title.ceo": "सी ई ओ",
+	"team.title.ra": "अनुसंधान सहायक",
+	"team.title.mtech_ai": "एमटेक (आर्टिफिशियल इंटेलिजेंस)",
+	"team.title.post_doc": "पोस्टडॉक्टोरल सदस्य",
+	"team.title.mo": "चिकित्सा अधिकारी",
+	"team.title.sde": "सॉफ्टवेयर इंजीनियर",
+	"team.title.phd": "पीएचडी स्कॉलर",
+	"team.areas.sriram": "वाक् पहचान, दीप लर्निंग, तंत्रिका विज्ञान",
+	"team.areas.pkg": "भाषण उत्पादन, अभिव्यक्ति, भाषण विकारों",
+	"team.areas.anand": "वाक् पहचान",
+	"team.areas.neeraj": "श्रवण तंत्रिका विज्ञान, सिग्नल प्रोसेसिंग",
+	"team.areas.prashant": "अध्यक्ष मान्यता",
+	"team.areas.shreyas": "अध्यक्ष मान्यता, मशीन लर्निंग",
+	"team.areas.srikanth": "सिग्नल प्रोसेसिंग, वाक् पहचान"
 }
