--- a/src/assets/i18n/ka-IN.json
+++ b/src/assets/i18n/ka-IN.json
@@ -24,8 +24,42 @@
     "about.subtitle.tool": "ಡಯಾಗ್ನೋಸ್ಟಿಕ್ ಟೂಲ್",
     "about.data.para1": "ನಾವು ಆರೋಗ್ಯಕರ ವ್ಯಕ್ತಿಗಳ ಧ್ವನಿ ಮಾದರಿಗಳು ಒಳಗೊಂಡ ಒಂದು ದತ್ತಾಂಶ ರಚಿಸುವ ಗುರಿ, ಮತ್ತು COVID -19 ಸೋಂಕಿನಿಂದ ಆ. ಡೇಟಾ ವೆಬ್ ಮತ್ತು ಮೊಬೈಲ್ ಅಪ್ಲಿಕೇಶನ್ ಬಳಸಿಕೊಂಡು ಸಂಗ್ರಹಿಸಲಾಗುತ್ತದೆ. ಸಂಗ್ರಹಿಸಿದ ಧ್ವನಿ ಮಾದರಿಗಳು ಉಸಿರಾಟದ ಶಬ್ದಗಳ (ವೇಗವಾಗಿ ಮತ್ತು ನಿಧಾನವಾಗಿ), ಕೆಮ್ಮು ಶಬ್ದಗಳ (ಆಳವಾದ ಮತ್ತು ಆಳವಿಲ್ಲದ), ನಿರಂತರ ಸ್ವರಗಳ phonation (/ ಒಂದು / ಮಾಡಿದ ಮಾಹಿತಿ, / ನಾನು /, / ಒ /) ಸೇರಿವೆ ನಿಧಾನ ಮತ್ತು ವೇಗದ ಗತಿಯಲ್ಲಿ, ಮತ್ತು ಎಣಿಕೆಯ ಸಂಖ್ಯೆಗಳನ್ನು. ಸಂಗ್ರಹಿಸಿದ ಮೆಟಾಡೇಟಾ ಮಾಹಿತಿ ಭಾಗವಹಿಸುವವರ ವಯಸ್ಸು, ಲಿಂಗ, ಸ್ಥಳ (ದೇಶ, ರಾಜ್ಯ / ಪ್ರಾಂತ್ಯ), ಪ್ರಸ್ತುತ ಆರೋಗ್ಯದ ಸ್ಥಿತಿ ಒಳಗೊಂಡಿದೆ (ಆರೋಗ್ಯಕರ / ಬಹಿರಂಗ / ಸಂಸ್ಕರಿಸಿದ / ಸೋಂಕಿತ) ಮತ್ತು ರೋಗದ ಹರಡುವಿಕೆಯ (ಪೂರ್ವ ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ವೈದ್ಯಕೀಯ ಪರಿಸ್ಥಿತಿಗಳು ಉಪಸ್ಥಿತಿ).",
     "about.data.para2": "ಯಾವುದೇ ವೈಯಕ್ತಿಕವಾಗಿ ಗುರುತಿಸಬಲ್ಲಂತಹ ಮಾಹಿತಿಯನ್ನು ಸಂಗ್ರಹಿಸಲಾಗುತ್ತದೆ, ಮತ್ತು ದತ್ತಾಂಶ ಸಂಗ್ರಹವನ್ನು ಕೊಡುಗೆ ಗೌಪ್ಯತೆಯನ್ನು ಗೌರವಿಸುತ್ತದೆ. ಡೇಟಾವನ್ನು ಸಹ ಶೇಖರಣಾ ಸ್ವತಃ ಸಮಯದಲ್ಲಿ ಅನಾಮಧೇಯ. ಎಲ್ಲಾ ಸಂಗ್ರಹಿಸಿದ ಡೇಟಾವನ್ನು ಲಭ್ಯವಿದೆ <a href=\"https://github.com/iiscleap/Coswara-Data\"> ಅಪ್ಡೇಟ್ಗೊಳಿಸಲಾಗಿದೆ ಪ್ರತಿದಿನವು ಇಲ್ಲಿ </a> ಇರುತ್ತದೆ.",
-    "about.modelling.para1": "ಸಂಗ್ರಹಿಸಿದ ಡೇಟಾವನ್ನು ಸಿಗ್ನಲ್ ಸಂಸ್ಕರಣೆ ಮತ್ತು ಯಂತ್ರ ಕಲಿಕೆ ತಂತ್ರಗಳನ್ನು ಬಳಸಿ ವಿಶ್ಲೇಷಣೆ ಮಾಡುತ್ತದೆ. ಗೋಲು ಧ್ವನಿ ಮಾದರಿಗಳು ನಿಂದ 'ಸೋಂಕು ಮುದ್ರಿತ' ಗುರುತಿಸುವಿಕೆ ನೆರವು ಗಣಿತದ ಮಾದರಿಗಳನ್ನು ನಿರ್ಮಿಸಲು ಹೊಂದಿದೆ. ನಾವು ದತ್ತಾಂಶ ರಚಿಸುವಾಗ ಈ ಹಂತದಲ್ಲಿ ಕೆಲಸಕ್ಕೆ ಪ್ರಗತಿಯಲ್ಲಿರುವ ಹೊಂದಿದೆ.",
+    "about.modelling.para1": "ಸಂಗ್ರಹಿಸಿದ ಡೇಟಾವನ್ನು ಸಿಗ್ನಲ್ ಸಂಸ್ಕರಣೆ ಮತ್ತು ಯಂತ್ರ ಕಲಿಕೆ ತಂತ್ರಗಳನ್ನು ಬಳಸಿ ವಿಶ್ಲೇಷಣೆ ಮಾಡುತ್ತದೆ. ಗೋಲು ಧ್ವನಿ ಮಾದರಿಗಳು ನಿಂದ "ಸೋಂಕು ಮುದ್ರಿತ" ಗುರುತಿಸುವಿಕೆ ನೆರವು ಗಣಿತದ ಮಾದರಿಗಳನ್ನು ನಿರ್ಮಿಸಲು ಹೊಂದಿದೆ. ನಾವು ದತ್ತಾಂಶ ರಚಿಸುವಾಗ ಈ ಹಂತದಲ್ಲಿ ಕೆಲಸಕ್ಕೆ ಪ್ರಗತಿಯಲ್ಲಿರುವ ಹೊಂದಿದೆ.",
     "about.modelling.para2": "ನಾವು ಒಂದು Github ವೇದಿಕೆ ಮೂಲಕ ಬಹಿರಂಗವಾಗಿ ರಚನಾತ್ಮಕ ರೂಪದಲ್ಲಿ ಸಂಗ್ರಹಿಸಲಾದ ದತ್ತಾಂಶ ಬಿಡುಗಡೆ ಮಾಡುವ ಗುರಿ. ಇದಾದ ರಿಯಾಲಿಟಿ ಪಾಯಿಂಟ್ ಆಫ್ ಆರೈಕೆ ರೋಗ ಮಾಡುವಲ್ಲಿ ಕೊಡುಗೆ ದೊಡ್ಡ ಸಂಶೋಧನಾ ಸಮುದಾಯದಿಂದ ಪೂಲ್ ಪ್ರಯತ್ನದಲ್ಲಿ ಮಾಡುವುದು.",
     "about.tool.para1": "ನಾವು ಒಂದು ವೆಬ್ / ಮೊಬೈಲ್ ಅಪ್ಲಿಕೇಶನ್ ರೋಗ ಉಪಕರಣವನ್ನು ಬಿಡುಗಡೆ ಗುರಿ. ದತ್ತಾಂಶ ಸೃಷ್ಟಿ ಹಂತಕ್ಕೆ ಹೋಲುತ್ತದೆ, ಧ್ವನಿ ಮಾದರಿಗಳು ರೆಕಾರ್ಡಿಂಗ್, ಮತ್ತು ಮೇಲಾಗಿ ಅಪ್ಲಿಕೇಶನ್ ವಿನಂತಿಗಳನ್ನು COVID -19 ಸೋಂಕು ಸಂಭವನೀಯತೆಯನ್ನು ಸೂಚಿಸುವ ಸ್ಕೋರ್ ಒದಗಿಸುತ್ತದೆ. ಉಪಕರಣದ ಅಂತಿಮ ನಿಯೋಜನೆ ವೈದ್ಯಕೀಯ ಸಂಶೋಧನೆಗಳ ಜೊತೆ ಊರ್ಜಿತಗೊಳಿಸುವಿಕೆಯ, ಮತ್ತು ಪ್ರಮಾಣೀಕರಣ / ಪ್ರಾಧಿಕಾರಗಳ ಅನುಮೋದನೆಗೆ ಒಳಪಟ್ಟಿರುತ್ತದೆ.",
-    "about.tool.para2": "ಈ ರೋಗನಿರ್ಣಯವನ್ನು ವಿಧಾನದ ಹೆಚ್ಚು ಸರಳವಾದ ಹಾಗೂ ವೆಚ್ಚ ಪರಿಣಾಮಕಾರಿ ಗುಣದಿಂದಾಗಿ, ನಾವು ಉಪಕರಣದ ಸಹ ಭಾಗಶಃ ಯಶಸ್ಸನ್ನು ಸಾಂಕ್ರಾಮಿಕ ಫಾರ್ ರೋಗನಿರ್ಣಯ ಮಾಡುವುದನ್ನು ಮೊದಲ ಸಾಲಿನಲ್ಲಿ ಒಂದು ಬೃಹತ್ ನಿಯೋಜನೆ ಶಕ್ತಗೊಳಿಸಿ ಎಂದು ಆಧಾರ ಕಲ್ಪನೆ. ಸಂಭಾವ್ಯ ರೋಗನಿರ್ಣಯದ ಸಾಧನವಾಗಿ ರಾಸಾಯನಿಕ ಪರೀಕ್ಷೆಯು ಬದಲಾಯಿಸಲು ಆಗುವುದಿಲ್ಲ ಆದರೆ ಕೇವಲ ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಪರೀಕ್ಷಾ ವಿಧಾನಗಳನ್ನು ಪೂರಕ."
+    "about.tool.para2": "ಈ ರೋಗನಿರ್ಣಯವನ್ನು ವಿಧಾನದ ಹೆಚ್ಚು ಸರಳವಾದ ಹಾಗೂ ವೆಚ್ಚ ಪರಿಣಾಮಕಾರಿ ಗುಣದಿಂದಾಗಿ, ನಾವು ಉಪಕರಣದ ಸಹ ಭಾಗಶಃ ಯಶಸ್ಸನ್ನು ಸಾಂಕ್ರಾಮಿಕ ಫಾರ್ ರೋಗನಿರ್ಣಯ ಮಾಡುವುದನ್ನು ಮೊದಲ ಸಾಲಿನಲ್ಲಿ ಒಂದು ಬೃಹತ್ ನಿಯೋಜನೆ ಶಕ್ತಗೊಳಿಸಿ ಎಂದು ಆಧಾರ ಕಲ್ಪನೆ. ಸಂಭಾವ್ಯ ರೋಗನಿರ್ಣಯದ ಸಾಧನವಾಗಿ ರಾಸಾಯನಿಕ ಪರೀಕ್ಷೆಯು ಬದಲಾಯಿಸಲು ಆಗುವುದಿಲ್ಲ ಆದರೆ ಕೇವಲ ಅಸ್ತಿತ್ವದಲ್ಲಿರುವ ಪರೀಕ್ಷಾ ವಿಧಾನಗಳನ್ನು ಪೂರಕ.",
+    "media.title": "ವಾರ್ತೆಯಲ್ಲಿ",
+    "media.content": "ನಾವು ನಮ್ಮ ಸಂಶೋಧನಾ ಪ್ರಚಾರ ಮತ್ತು ಧನಾತ್ಮಕ ಡೇಟಾ ಸಂಗ್ರಹಣೆ ಕೊಡುಗೆ ಮಾಧ್ಯಮಗಳ ಸಹಾಯ ಧನ್ಯವಾದಗಳು.",
+    "team.title": "ತಂಡ ಭೇಟಿ",
+    "name.sriram": "ಡಾ ಶ್ರೀರಾಮ್ ಗಣಪತಿ",
+    "name.pkg": "ಡಾ Prasanta ಕುಮಾರ್ ಘೋಷ್",
+    "name.anand": "ಆನಂದ್ ಮೋಹನ್",
+    "name.anuroop": "Anuroop ಅಯ್ಯಂಗಾರ್",
+    "name.neeraj": "ಡಾ ನೀರಜ್ ಶರ್ಮಾ",
+    "name.prashant": "ಪ್ರಶಾಂತ್ ಕೃಷ್ಣನ್",
+    "name.nirmala": "ಡಾ ಆರ್ ನಿರ್ಮಲಾ",
+    "name.raksheet": "Raksheet ಭಟ್",
+    "name.shahbaz": "ಶಹಬಾಜ್ ಸುಲ್ತಾನ್",
+    "name.shreyas": "ಶ್ರೇಯಸ್ ರಾಮೋಜಿ",
+    "name.srikanth": "ಶ್ರೀಕಾಂತ್ ರಾಜ್ Chetupalli",
+    "place.iisc": "ಅಟ್ IISc ಬೆಂಗಳೂರು",
+    "place.cmu": "ಸಿಎಮ್ಯು, ಅಮೇರಿಕಾ",
+    "place.cogknit": "Cogknit ಶಬ್ದಾರ್ಥಗಳು",
+    "place.upgrad": "upGrad",
+    "team.title.asst_prof": "ಸಹಾಯಕ ಪ್ರಾಧ್ಯಾಪಕ",
+    "team.title.assoc_prof": "ಸಹ ಪ್ರಾಧ್ಯಾಪಕರು",
+    "team.title.ceo": "ಸಿಇಒ",
+    "team.title.ra": "ಸಂಶೋಧನಾ ಸಹಾಯಕ",
+    "team.title.mtech_ai": "MTech (ಕೃತಕ ಬುದ್ಧಿಮತ್ತೆ)",
+    "team.title.post_doc": "ಪೋಸ್ಟ್ಡಾಕ್ಟೊರಲ್ ಫೆಲೋ",
+    "team.title.mo": "ವೈದ್ಯಕೀಯ ಅಧಿಕಾರಿ",
+    "team.title.sde": "ಸಾಫ್ಟ್ವೇರ್ ಇಂಜಿನಿಯರ್",
+    "team.title.phd": "ಪಿಎಚ್ಡಿ ಸ್ಕಾಲರ್",
+    "team.areas.sriram": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್, ಡೀಪ್ ಕಲಿಕೆ, ನ್ಯೂರೋಸೈನ್ಸ್",
+    "team.areas.pkg": "ಸ್ಪೀಚ್ ಪ್ರೊಡಕ್ಷನ್, ಆರ್ಟಿಕ್ಯುಲೇಶನ್, ಸ್ಪೀಚ್ ಡಿಸಾರ್ಡರ್ಸ್",
+    "team.areas.anand": "ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್",
+    "team.areas.neeraj": "ಆಡಿಟರಿ ನ್ಯೂರೋಸೈನ್ಸ್, ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್",
+    "team.areas.prashant": "ಸ್ಪೀಕರ್ ಗುರುತಿಸುವಿಕೆ",
+    "team.areas.shreyas": "ಸ್ಪೀಕರ್ ಗುರುತಿಸುವಿಕೆ, ಮೆಷೀನ್ ಲರ್ನಿಂಗ್",
+    "team.areas.srikanth": "ಸಿಗ್ನಲ್ ಪ್ರೊಸೆಸಿಂಗ್, ಸ್ಪೀಚ್ ರೆಕಗ್ನಿಷನ್"
 }
