--- a/src/assets/i18n/ml-IN.json
+++ b/src/assets/i18n/ml-IN.json
@@ -1,5 +1,4 @@
-{
-    "app.full_title": "പ്രോജക്ട് ചൊസ്വര",
+{"app.full_title": "പ്രോജക്ട് ചൊസ്വര",
     "app.title": "ചൊസ്വര",
     "language.english": "ഇംഗ്ലീഷ്",
     "language.hindi": "हिन्दी",
@@ -24,8 +23,41 @@
     "about.subtitle.tool": "ഡയഗ്നോസ്റ്റിക് ടൂൾ",
     "about.data.para1": "നാം ആരോഗ്യകരമായ വ്യക്തികളും, ചൊവിദ്-19 അണുബാധ കൂടെയുള്ളവരിൽ നിന്നുള്ള ശബ്ദ സാമ്പിളുകളും വിന്യസിക്കപ്പെട്ട ഒരു ഡാറ്റാഗണത്തിന്റെ സൃഷ്ടിക്കുന്നത് ലക്ഷ്യം. ഡാറ്റ ഒരു വെബ്, മൊബൈൽ ആപ്ലിക്കേഷൻ ഉപയോഗിച്ച് ശേഖരിക്കപ്പെടും. ശേഖരിച്ച ശബ്ദ സാമ്പിളുകൾ വേഗത ഫാസ്റ്റ് വേഗത്തിലാണ് ശ്വസിക്കുന്ന ശബ്ദങ്ങൾ (ഫാസ്റ്റ് സ്ലോ), ചുമ ശബ്ദങ്ങൾ (ആഴവും ആഴം), സുസ്ഥിരമായ സ്വരാക്ഷരങ്ങളുടെ ഫൊനതിഒന് (/ ഒരു / ഉണ്ടാക്കി, / ഞാൻ /, / O / പോലെ), വർദ്ധിച്ചുകൊണ്ടിരിക്കുന്നു നമ്പറുകൾ എന്നിവ. മെറ്റാഡാറ്റ വിവരങ്ങൾ ശേഖരിച്ച പങ്കാളിയും പ്രായം, ലിംഗഭേദം, സ്ഥാനം (രാജ്യം, സംസ്ഥാനം / പ്രവിശ്യ), നിലവിലെ ആരോഗ്യ നില (ആരോഗ്യകരമായ / ആക്ഷേപം / സൌഖ്യം / ബാധിച്ച) ഉം ചൊമൊര്ബിദിതിഎസ് (പ്രീ-നിലവിലുള്ള മെഡിക്കൽ അവസ്ഥ) സാന്നിദ്ധ്യം ഉൾപ്പെടുന്നു.",
     "about.data.para2": "വ്യക്തിപരമായി തിരിച്ചറിയാനാകുന്ന വിവരങ്ങൾ ശേഖരിക്കപ്പെടുന്ന, ഡാറ്റ ശേഖരണം സംഭാവന ചെയ്യുന്ന സ്വകാര്യത മാനിക്കുന്നു. ഡാറ്റ സ്റ്റോറേജ് തന്നെ അജ്ഞാതമാക്കിയ. എല്ലാ ശേഖരിച്ച ഡാറ്റ ലഭ്യമായ നിത്യേന </a> ഇവിടെ ഹ്രെഫ്=\"ഹ്ത്ത്പ്സ്://ഗിഥുബ്.ചൊമ്/ഇഇസ്ച്ലെഅപ്/ചൊസ്വര-ദത\"> <a അപ്ഡേറ്റ് ചെയ്യും.",
-    "about.modelling.para1": "ശേഖരിച്ച ഡാറ്റ സിഗ്നൽ പ്രോസസ്സിംഗ് മെഷീൻ വിദ്യകൾ പഠന ഉപയോഗിച്ച് വിശകലനം ചെയ്യും. ലക്ഷ്യം ശബ്ദ സാമ്പിളുകളും നിന്നും 'അണുബാധ പ്രിന്റുകൾ' തിരിച്ചറിയൽ ഇതിനെ ഗണിത മോഡലുകൾ നിർമ്മിക്കുന്നതിനായി ആണ്. ഈ ഘട്ടത്തിൽ ഒരു പ്രവൃത്തി-ഇൻ-പുരോഗതി ഞങ്ങൾ ഡാറ്റാഗണത്തിന്റെ സൃഷ്ടിച്ചത് ആണ്.",
+    "about.modelling.para1": "ശേഖരിച്ച ഡാറ്റ സിഗ്നൽ പ്രോസസ്സിംഗ് മെഷീൻ വിദ്യകൾ പഠന ഉപയോഗിച്ച് വിശകലനം ചെയ്യും. ലക്ഷ്യം ശബ്ദ സാമ്പിളുകളും നിന്നും "അണുബാധ പ്രിന്റുകൾ" തിരിച്ചറിയൽ ഇതിനെ ഗണിത മോഡലുകൾ നിർമ്മിക്കുന്നതിനായി ആണ്. ഈ ഘട്ടത്തിൽ ഒരു പ്രവൃത്തി-ഇൻ-പുരോഗതി ഞങ്ങൾ ഡാറ്റാഗണത്തിന്റെ സൃഷ്ടിച്ചത് ആണ്.",
     "about.modelling.para2": "ഞങ്ങൾ ഒരു സാമൂഹികം പ്ലാറ്റ്ഫോം വഴി പരസ്യമായി ഒരു ഘടനാപരമായ രൂപത്തിൽ ശേഖരിച്ച ഡാറ്റാഗണത്തിന്റെ റിലീസ് ചെയ്തത് ലക്ഷ്യം. ഈ പോയിന്റ്-ഓഫ്-കെയർ രോഗനിർണയം ഒരു റിയാലിറ്റി ഉടൻ നിർമ്മിക്കാൻ സംഭാവന വലിയ ഗവേഷണ കമ്മ്യൂണിറ്റി നിന്ന് പൂള് ശ്രമം ആണ്.",
     "about.tool.para1": "നാം ഒരു വെബ് / മൊബൈൽ ആപ്ലിക്കേഷൻ പോലെ പോകേണ്ടത് റിലീസ് ലക്ഷ്യം. , ഡാറ്റാഗണത്തിലെ സൃഷ്ടി ഘട്ടത്തിൽ സമാനമായ ശബ്ദം സാമ്പിളുകൾ രേഖപ്പെടുത്തുന്നതിൽ അപേക്ഷ അഭ്യർത്ഥനകൾ, ഒപ്പം വെയിലത്ത് ചൊവിദ്-19 അണുബാധ സംഭാവ്യത സൂചിപ്പിക്കുന്ന ഒരു സ്കോർ നൽകുന്നു. ഉപകരണം അവസാന വിന്യാസം ക്ലിനിക്കൽ കണ്ടെത്തലുകളോട് വാലിഡേഷൻ എന്നിവ നിയമാധികാരികളിൽ നിന്നുള്ള അംഗീകാരം / അനുമതി വിധേയമാണ്.",
-    "about.tool.para2": "വളരെ ലളിതമായ ഈ രോഗനിർണയം സമീപനം ഫലപ്രദമായ സ്വഭാവം കുറഞ്ഞ നൽകിയിരിക്കുന്ന ഞങ്ങൾ ഉപകരണം പോലും ഒരു ഭാഗിക വിജയം പാൻഡെമിക് വേണ്ടി രോഗനിർണയം ഒരു ആദ്യ വരി ഒരു വൻ വിന്യാസം പ്രവർത്തനക്ഷമമാക്കുക എന്ന് ഹ്യ്പൊഥെസിജെ. സാധ്യതയുള്ള ഡയഗ്ണോസ്റ്റിക് ഉപകരണം കെമിക്കൽ പരിശോധന മാറ്റി പകരം മറിച്ച് നിലവിലുള്ള പരീക്ഷിച്ചു രീതികൾ അനുബന്ധമായി."
-}
+    "about.tool.para2": "വളരെ ലളിതമായ ഈ രോഗനിർണയം സമീപനം ഫലപ്രദമായ സ്വഭാവം കുറഞ്ഞ നൽകിയിരിക്കുന്ന ഞങ്ങൾ ഉപകരണം പോലും ഒരു ഭാഗിക വിജയം പാൻഡെമിക് വേണ്ടി രോഗനിർണയം ഒരു ആദ്യ വരി ഒരു വൻ വിന്യാസം പ്രവർത്തനക്ഷമമാക്കുക എന്ന് ഹ്യ്പൊഥെസിജെ. സാധ്യതയുള്ള ഡയഗ്ണോസ്റ്റിക് ഉപകരണം കെമിക്കൽ പരിശോധന മാറ്റി പകരം മറിച്ച് നിലവിലുള്ള പരീക്ഷിച്ചു രീതികൾ അനുബന്ധമായി.",
+    "media.title": "വാർത്തയിൽ",
+    "media.content": "ഞങ്ങളുടെ ഗവേഷണ പോസിറ്റീവായ ഡാറ്റ ശേഖരണം ലേക്ക് സംഭാവന മാധ്യമങ്ങളുടെ സഹായം അഭിനന്ദിക്കുന്നു.",
+    "team.title": "ടീം സംഗമം",
+    "name.sriram": "ഡോ ശ്രീറാം ഗണപതി",
+    "name.pkg": "ഡോ പ്രശാന്ത കുമാർ ഘോഷ്",
+    "name.anand": "ആനന്ദ് മോഹൻ",
+    "name.anuroop": "അനുരൊഒപ് അയ്യങ്കാർ",
+    "name.neeraj": "ഡോ നീരജ് ശർമ",
+    "name.prashant": "പ്രശാന്ത് കൃഷ്ണൻ",
+    "name.nirmala": "ഡോ ആർ നിർമ്മല",
+    "name.raksheet": "രക്ശെഎത് ഭട്ട്",
+    "name.shahbaz": "ഷഹബാസ് സുൽത്താൻ",
+    "name.shreyas": "ശ്രേയസ് റാമോജി",
+    "name.srikanth": "ശ്രീകാന്ത് രാജ് ഛെതുപല്ലി",
+    "place.iisc": "ഐഐഎസ് ബാംഗ്ലൂർ",
+    "place.cmu": "കഥയിലൂടെ, യുഎസ്എ",
+    "place.cogknit": "ചൊഗ്ക്നിത് സെമാന്റിക്കുകൾ",
+    "place.upgrad": "ഉപ്ഗ്രദ്",
+    "team.title.asst_prof": "അസിസ്റ്റന്റ് പ്രൊഫസർ",
+    "team.title.assoc_prof": "അസോസിയേറ്റ് പ്രഫസർ",
+    "team.title.ceo": "സിഇഒ",
+    "team.title.ra": "ഗവേഷണ സഹായി",
+    "team.title.mtech_ai": "എം.ടെക് (ആർട്ടിഫിഷ്യൽ ഇന്റലിജൻസ്)",
+    "team.title.post_doc": "ബിരുദാനന്തര ഫെലോ",
+    "team.title.mo": "മെഡിക്കൽ ഓഫീസർ",
+    "team.title.sde": "സോഫ്റ്റ്വെയർ എൻജിനീയർ",
+    "team.title.phd": "പിഎച്ച്ഡി സ്കോളർ",
+    "team.areas.sriram": "സംഭാഷണം തിരിച്ചറിയൽ, ഡീപ് പഠന, ന്യൂറോസയൻസ്",
+    "team.areas.pkg": "സ്പീച്ച് പ്രൊഡക്ഷൻ, അവയില്, സ്പീച്ച് തകരാറുകൾ",
+    "team.areas.anand": "സംഭാഷണം തിരിച്ചറിയൽ",
+    "team.areas.neeraj": "ഓഡിറ്ററി ന്യൂറോസയൻസ്, സിഗ്നൽ പ്രോസസിംഗ്",
+    "team.areas.prashant": "സ്പീക്കർ തിരിച്ചറിയൽ",
+    "team.areas.shreyas": "സ്പീക്കർ തിരിച്ചറിയൽ, മെഷീൻ ലേണിംഗ്",
+    "team.areas.srikanth": "സിഗ്നൽ പ്രോസസിംഗ്, സംഭാഷണം തിരിച്ചറിയൽ"}
