--- a/src/assets/i18n/te-IN.json
+++ b/src/assets/i18n/te-IN.json
@@ -24,8 +24,42 @@
     "about.subtitle.tool": "డయాగ్నస్టిక్ టూల్",
     "about.data.para1": "మేము ఆరోగ్యవంతమైన వ్యక్తుల నుండి వాయిస్ నమూనాలను మలినాలు డేటాసెట్ సృష్టించడం గురి, మరియు COVID -19 సంక్రమణ తో ఆ. డేటా ఒక వెబ్ మరియు మొబైల్ అప్లికేషన్ ఉపయోగించి సేకరించబడుతుంది. వాయిస్ నమూనాలను సేకరించిన శ్వాస శబ్దాలు (ఫాస్ట్ మరియు స్లో), దగ్గు శబ్దాలు (లోతైన మరియు గాఢ), నిరంతర అచ్చులు అనేది ఉచ్ఛారణ (/ ఒక / తయారు లో, / i /, / o /) ఉన్నాయి నెమ్మదిగా మరియు వేగంగా, మరియు లెక్కింపు సంఖ్యలు. సేకరించిన మెటాడాటా సమాచారం పాల్గొనే వయసు, లింగము, నగర (దేశం, రాష్ట్రం / ప్రాంతం), ప్రస్తుత ఆరోగ్య స్థితి కలిగి (ఆరోగ్యకరమైన / బహిర్గతం / నయమవుతుంది / సోకిన) మరియు comorbidities (ముందుగా ఉన్న వైద్య పరిస్థితులు) ఉనికిని.",
     "about.data.para2": "వ్యక్తిగతంగా గుర్తించదగిన సమాచారాన్ని సేకరిస్తారు, మరియు డేటా సేకరణ కంట్రిబ్యూటర్ గోప్యతా గౌరవిస్తుంది. డేటా నిల్వ కూడా సమయంలో అనామకంగా. అన్ని సేకరించిన డేటా అందుబాటులో రోజువారీ ఇక్కడ </a> <a href=\"https://github.com/iiscleap/Coswara-Data\"> అప్డేట్ అవుతుంది.",
-    "about.modelling.para1": "సేకరించిన డేటా సిగ్నల్ ప్రాసెసింగ్ మరియు యంత్ర అభ్యాస పద్ధతులను ఉపయోగించి విశ్లేషించవచ్చు ఉంటుంది. లక్ష్యం వాయిస్ నమూనాలను నుండి 'ఇన్ఫెక్షన్ ప్రింట్లు' గుర్తింపు సాయపడతాయి గణిత నమూనాలు నిర్మించడానికి ఉంది. మేము డేటాసెట్ సృష్టించడానికి అయితే ఈ దశలో పని లో పురోగతి ఉంది.",
+    "about.modelling.para1": "సేకరించిన డేటా సిగ్నల్ ప్రాసెసింగ్ మరియు యంత్ర అభ్యాస పద్ధతులను ఉపయోగించి విశ్లేషించవచ్చు ఉంటుంది. లక్ష్యం వాయిస్ నమూనాలను నుండి "ఇన్ఫెక్షన్ ప్రింట్లు" గుర్తింపు సాయపడతాయి గణిత నమూనాలు నిర్మించడానికి ఉంది. మేము డేటాసెట్ సృష్టించడానికి అయితే ఈ దశలో పని లో పురోగతి ఉంది.",
     "about.modelling.para2": "మేము కూడా బహిరంగంగా ఒక Github వేదిక ద్వారా ఒక నిర్మాణాత్మక రూపంలో సేకరించిన డేటాసెట్ విడుదల గురి. ఇది త్వరలోనే రియాలిటీ పాయింట్-అఫ్-కేర్ నిర్ధారణ చేయడానికి దోహదం పెద్ద పరిశోధనా సంఘం నుండి పూల్ ప్రయత్నంలో ఉంది.",
     "about.tool.para1": "మేము ఒక వెబ్ / మొబైల్ అప్లికేషన్ గా నిర్ధారణ సాధనం విడుదల గురి. డేటాసెట్ సృష్టి దశకు ఇలాంటి వాయిస్ నమూనాలను రికార్డింగ్, మరియు వరకు కోసం అప్లికేషన్ అభ్యర్థనలు COVID -19 సంక్రమణ సంభావ్యత సూచించే ఒక స్కోర్ అందిస్తుంది. సాధనం యొక్క చివరి విస్తరణ వైద్య పరిశోధనలను ధ్రువీకరణ, సమర్ధులైన అధికారుల నుంచి అధికార / అనుమతికి లోబడి ఉంటుంది.",
-    "about.tool.para2": "ఈ నిర్ధారణ విధానం యొక్క అత్యంత సరళమైనది మరియు సమర్థవంతమైన ఖర్చు స్వభావం ఇచ్చిన, మేము సాధనం యొక్క ఒక పాక్షిక విజయం మహమ్మారి కోసం రోగ నిర్ధారణ యొక్క మొదటి లైన్ భారీ విస్తరణ మూలానా ఊహాగానములు. సంభావ్య విశ్లేషణ పరికరం రసాయన పరీక్షలకోసం భర్తీ కాదు కానీ కేవలం ఇప్పుడున్న పరీక్షా పద్ధతుల భర్తీ చేస్తాయి."
+    "about.tool.para2": "ఈ నిర్ధారణ విధానం యొక్క అత్యంత సరళమైనది మరియు సమర్థవంతమైన ఖర్చు స్వభావం ఇచ్చిన, మేము సాధనం యొక్క ఒక పాక్షిక విజయం మహమ్మారి కోసం రోగ నిర్ధారణ యొక్క మొదటి లైన్ భారీ విస్తరణ మూలానా ఊహాగానములు. సంభావ్య విశ్లేషణ పరికరం రసాయన పరీక్షలకోసం భర్తీ కాదు కానీ కేవలం ఇప్పుడున్న పరీక్షా పద్ధతుల భర్తీ చేస్తాయి.",
+    "media.title": "వార్తల్లో",
+    "media.content": "మేము మా పరిశోధన ప్రచారం మరియు నిశ్చయముగా డేటా సేకరణ పెంపొందించడంలో మీడియా సహాయాన్ని మేము అభినందిస్తున్నాము.",
+    "team.title": "జట్టు కలిసే",
+    "name.sriram": "డాక్టర్ శ్రీరామ్ గణపతి",
+    "name.pkg": "డాక్టర్ ప్రశాంత కుమార్ ఘోష్",
+    "name.anand": "ఆనంద్ మోహన్",
+    "name.anuroop": "Anuroop అయ్యంగార్",
+    "name.neeraj": "డాక్టర్ నీరజ్ శర్మ",
+    "name.prashant": "ప్రశాంత్ కృష్ణన్",
+    "name.nirmala": "డాక్టర్ R నిర్మలా",
+    "name.raksheet": "Raksheet భట్",
+    "name.shahbaz": "షాబాజ్ సుల్తాన్",
+    "name.shreyas": "శ్రేయాస్ రామోజీ",
+    "name.srikanth": "శ్రీకాంత్ రాజ్ Chetupalli",
+    "place.iisc": "IISc బెంగుళూర్",
+    "place.cmu": "CMU, USA",
+    "place.cogknit": "Cogknit సెమాంటిక్స్",
+    "place.upgrad": "upGrad",
+    "team.title.asst_prof": "సహాయ ఆచార్యులు",
+    "team.title.assoc_prof": "సహ ప్రాచార్యుడు",
+    "team.title.ceo": "సియిఒ",
+    "team.title.ra": "పరిశోధన సహాయకుడు",
+    "team.title.mtech_ai": "MTech (ఆర్టిఫిషియల్ ఇంటెలిజెన్స్)",
+    "team.title.post_doc": "పోస్ట్ డాక్టోరల్ ఫెలో",
+    "team.title.mo": "మెడికల్ ఆఫీసర్",
+    "team.title.sde": "సాఫ్ట్వేర్ ఇంజనీర్",
+    "team.title.phd": "పీహెచ్డీ స్కాలర్",
+    "team.areas.sriram": "స్పీచ్ రికగ్నిషన్, డీప్ నేర్చుకోవడం, న్యూరోసైన్స్",
+    "team.areas.pkg": "స్పీచ్ ఉత్పత్తి, భావప్రకటన, స్పీచ్ డిజార్డర్స్",
+    "team.areas.anand": "మాటలు గుర్తుపట్టుట",
+    "team.areas.neeraj": "శ్రవణ న్యూరోసైన్స్, సిగ్నల్ ప్రాసెసింగ్",
+    "team.areas.prashant": "స్పీకర్ రికగ్నిషన్",
+    "team.areas.shreyas": "స్పీకర్ రికగ్నిషన్, మెషిన్ లెర్నింగ్",
+    "team.areas.srikanth": "సిగ్నల్ ప్రాసెసింగ్, స్పీచ్ రికగ్నిషన్"
 }
