--- a/src/assets/i18n/ta-IN.json
+++ b/src/assets/i18n/ta-IN.json
@@ -24,8 +24,42 @@
     "about.subtitle.tool": "நோய் கண்டறியும் கருவி",
     "about.data.para1": "நாம் ஆரோக்கியமான தனிநபர்களிடம் இருந்து குரல் மாதிரிகள் உருவாக்குகின்றது தரவுத்தொகுப்பில் உருவாக்கும் நோக்கம், மற்றும் COVID 19 தொற்று உள்ளவர்கள். தரவு ஒரு வலை மற்றும் மொபைல் பயன்பாட்டை பயன்படுத்தி சேகரிக்கப்பட்டுள்ளன. சேகரிக்கப்பட்ட குரல் மாதிரிகள் மூச்சு ஒலிகள் (வேகமாக மற்றும் மெதுவாக), இருமல் ஒலிகள் (ஆழமான மற்றும் மேலோட்டமான) ஆக, நீடித்து உயிர் phonation (/ ஒரு / செய்யப்பட்ட என, / நான் /, / ஓ /) அடங்கும் மெதுவாக மற்றும் வேகமாக வேகத்தில், மற்றும் எண்ணும் எண்கள். சேகரிக்கப்பட்ட மெட்டாடேட்டா என்பது தகவலைப் பங்கு வயது, பாலினம், இடம் (நாடு, மாநிலம் / மாகாணம்), தற்போதைய சுகாதார நிலையும் அடங்கும் (ஆரோக்கியமான / வெளிப்படும் / குணப்படுத்த / பாதிக்கப்பட்ட) மற்றும் இணை (முன்னரே நிலவிய மருத்துவ நிலைமைகள்) முன்னிலையில்.",
     "about.data.para2": "தனிப்பட்ட முறையில் அடையாளப்படுத்தும் தகவல் சேகரிக்கப்பட்டுள்ளன, இது தரவு சேகரிப்பு பங்களிப்பாளர்கள் தனியுரிமையை மதிக்கிறது. தரவு சேமிப்பு தன்னை போது அநாமதேயத். அனைத்து சேகரிக்கப்பட்ட தரவுகள் இங்கே ஒரு தினசரி அடிப்படையில் </a> href=\"https://github.com/iiscleap/Coswara-Data\"> <a மேம்படுத்தப்பட்டது இருக்கும்.",
-    "about.modelling.para1": "சேகரிக்கப்பட்ட தரவு சிக்னல் பிராசசிங் மற்றும் இயந்திர கற்றல் நுட்பங்கள் பயன்படுத்தி ஆய்வு செய்யப்படும். இலக்கு குரல் மாதிரிகள் இருந்து 'தொற்று அச்சிட்டு' என்ற அடையாள உதவுதல் கணித மாதிரிகள் கட்ட வேண்டும். நாங்கள் தரவுத்தொகுப்பைக் உருவாக்கும் வரை இந்த நிலை ஒரு வொர்க்-முன்னேற்றம் உள்ளது.",
+    "about.modelling.para1": "சேகரிக்கப்பட்ட தரவு சிக்னல் பிராசசிங் மற்றும் இயந்திர கற்றல் நுட்பங்கள் பயன்படுத்தி ஆய்வு செய்யப்படும். இலக்கு குரல் மாதிரிகள் இருந்து "தொற்று அச்சிட்டு" என்ற அடையாள உதவுதல் கணித மாதிரிகள் கட்ட வேண்டும். நாங்கள் தரவுத்தொகுப்பைக் உருவாக்கும் வரை இந்த நிலை ஒரு வொர்க்-முன்னேற்றம் உள்ளது.",
     "about.modelling.para2": "நாம் வெளிப்படையாக ஒரு கிட்ஹப் மேடையில் வழியாக ஒரு கட்டமைக்கப்பட்ட வடிவில் சேகரிக்கப்பட்ட தரவுத்தொகுப்பைக் வெளியிட்டு நோக்கமுள்ளவை. இதை நடைமுறைப்படுத்தும் விரைவில் புள்ளி பாதுகாப்பு நோயைக் கண்டறிவதற்கு பங்களிக்க பெரிய ஆராய்ச்சி சமுதாயத்தில் இருந்து குளம் முயற்சி வேண்டும்.",
     "about.tool.para1": "நாம் ஒரு இணைய / மொபைல் பயன்பாடாக கண்டறிய கருவி வெளியிட நோக்கம். தரவுத்தொகுப்பைக் உருவாக்கம் மேடைக்கு இதே குரல் மாதிரிகள் பதிவு செய்வது மற்றும் முன்னுரிமை பயன்பாடு கோரிக்கைகளை COVID 19 தொற்று நிகழ்தகவு குறிக்கும் ஒரு மதிப்பெண் வழங்குகிறது. கருவி இறுதி பயன்படுத்தல் மருத்துவ கண்டுபிடிப்புகள் கொண்டு மதிப்பீடு மற்றும் தகுதிவாய்ந்த அதிகாரிகளிடமிருந்து அங்கீகாரம் / ஏற்பின் உள்ளது.",
-    "about.tool.para2": "இந்த நோயறிதலுடன் அணுகுமுறை மிகவும் எளிமையான மற்றும் செலவு குறைந்த இயல்பைப் பார்க்கும் போது, நாங்கள் கருவி கூட ஒரு பாதி வெற்றியையே தொற்று கண்டறியப்படலும் ஒரு முதல் வரி போன்றவற்றில் மாபெரும் பயன்படுத்தல் செயல்படுத்த என்று கற்பிதம். சாத்தியமான கண்டறியும் கருவி வேதியியல் பரிசோதனைக்காக பதிலாக மாட்டேன் ஆனால் வெறுமனே இருக்கும் பரிசோதனை முறைகள் துணையாக."
+    "about.tool.para2": "இந்த நோயறிதலுடன் அணுகுமுறை மிகவும் எளிமையான மற்றும் செலவு குறைந்த இயல்பைப் பார்க்கும் போது, நாங்கள் கருவி கூட ஒரு பாதி வெற்றியையே தொற்று கண்டறியப்படலும் ஒரு முதல் வரி போன்றவற்றில் மாபெரும் பயன்படுத்தல் செயல்படுத்த என்று கற்பிதம். சாத்தியமான கண்டறியும் கருவி வேதியியல் பரிசோதனைக்காக பதிலாக மாட்டேன் ஆனால் வெறுமனே இருக்கும் பரிசோதனை முறைகள் துணையாக.",
+    "media.title": "செய்தியில்",
+    "media.content": "நாங்கள் எங்கள் ஆராய்ச்சி ஊக்குவிக்கும் முறையிலும் நேர்மறையாகவும் தரவு சேகரிப்பு பங்களிப்பு ஊடக உதவி பாராட்டுகிறோம்.",
+    "team.title": "அணி சந்திக்க",
+    "name.sriram": "டாக்டர் ஸ்ரீராம் கணபதி",
+    "name.pkg": "டாக்டர் பிரசாந்தா குமார் கோஷ்",
+    "name.anand": "ஆனந்த் மோகன்",
+    "name.anuroop": "Anuroop ஐயங்கார்",
+    "name.neeraj": "டாக்டர் நீரஜ் சர்மா",
+    "name.prashant": "பிரசாந்த் கிருஷ்ணன்",
+    "name.nirmala": "டாக்டர் ஆர் நிர்மலா",
+    "name.raksheet": "Raksheet பட்",
+    "name.shahbaz": "ஷாபாஸ் சுல்தான்",
+    "name.shreyas": "ஸ்ரேயாஸ் ராமோஜி",
+    "name.srikanth": "ஸ்ரீகாந்த் ராஜ் Chetupalli",
+    "place.iisc": "ஐஐஎஸ்சி பெங்களூருவில்",
+    "place.cmu": "சீ.எம்.யூ, அமெரிக்கா",
+    "place.cogknit": "Cogknit செமாண்டிக்ஸ்",
+    "place.upgrad": "upGrad",
+    "team.title.asst_prof": "உதவி பேராசிரியர்",
+    "team.title.assoc_prof": "இணை பேராசிரியர்",
+    "team.title.ceo": "தலைமை நிர்வாக அதிகாரி",
+    "team.title.ra": "ஆராய்ச்சி உதவியாளர்",
+    "team.title.mtech_ai": "எம்.டெக் (செயற்கை நுண்ணறிவு)",
+    "team.title.post_doc": "முதுகலை டாக்டர் அவர்",
+    "team.title.mo": "மருத்துவ அதிகாரி",
+    "team.title.sde": "மென்பொருள் பொறியாளர்",
+    "team.title.phd": "பிஎச்டி ஸ்காலர்",
+    "team.areas.sriram": "பேச்சு அறிதல், டீப் கற்றல், நரம்பியல்",
+    "team.areas.pkg": "பேச்சு உற்பத்தி, ஒலிப்பு, பேச்சு சீர்குலைவுகள்",
+    "team.areas.anand": "பேச்சு அறிதல்",
+    "team.areas.neeraj": "ஆடிட்டரி நரம்பியல், சிக்னல் ப்ராசசிங்",
+    "team.areas.prashant": "சபாநாயகர் அங்கீகாரம்",
+    "team.areas.shreyas": "சபாநாயகர் ரிகாக்னிஷன், மெஷின் லேர்னிங்",
+    "team.areas.srikanth": "சிக்னல் ப்ராசசிங், பேச்சு அறிதல்"
 }
