--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -59,7 +59,7 @@
 	"forms.option.cld": "Chronic Lung Disease",
 	"forms.option.ht": "Hypertension",
 	"forms.option.ihd": "Ischemic Heart Disease",
-	"forms.option.mp" : "Muscle Pain"
+	"forms.option.mp" : "Muscle Pain",
 	"forms.option.diabetes": "Diabetes",
 	"record.message.info": "Please make sure you are in a quiet environment and keep your device around 20 cm from your face",
 	"record.title.breathing-shallow": "Breathing(shallow)",
