Edited Telugu translation

--- a/src/assets/i18n/te-IN.json
+++ b/src/assets/i18n/te-IN.json
@@ -1,7 +1,7 @@
 {
-    "app.full_title": "ప్రాజెక్టు Coswara",
-    "app.title": "coswara",
-    "language.english": "ఆంగ్ల",
+    "app.full_title": "ప్రాజెక్టు కోస్వర",
+    "app.title": "కోస్వర",
+    "language.english": "English",
     "language.hindi": "हिन्दी",
     "language.tamil": "தமிழ்",
     "language.kannada": "ಕನ್ನಡ",
@@ -10,55 +10,55 @@
     "language.telugu": "తెలుగు",
     "language.bengali": "বাংলা",
     "home.button.read": "ఇంకా చదవండి",
-    "home.button.record": "కొనసాగాలని డేటా రికార్డింగ్",
-    "home.content": "<a href=\"https://www.iisc.ac.in\" target=\"_blank\"> ఇండియన్ ఇన్స్టిట్యూట్ ఆఫ్ సైన్స్ ద్వారా ప్రాజెక్ట్ Coswara (IISc) బెంగుళూర్ </a> Covid -19 కోసం ఒక విశ్లేషణ పరికరం నిర్మించడానికి ఒక ప్రయత్నం శ్వాసకోశ, దగ్గు మరియు సంభాషణ శబ్దాల ఆధారంగా. ప్రాజెక్టును డేటా సేకరణ దశలో ఉంది. ఇది శ్వాస శబ్దాలు, దగ్గు శబ్దాలు, అచ్చు శబ్దాలు నిరంతర అనేది ఉచ్ఛారణ మరియు మీ సమయం సుమారు 5-7 నిమిషాలు పడుతుంది ఇది ఒక లెక్కింపు వ్యాయామం ఒక రికార్డింగ్ అందించడానికి పాల్గొనే అవసరం. వ్యక్తిగతంగా గుర్తించగల డేటా పాల్గొనే నుండి సేకరిస్తారు.",
+    "home.button.record": "డేటా రికార్డింగ్ కి కొనసాగండి",
+    "home.content": "<a href=\"https://www.iisc.ac.in\" target=\"_blank\"> భారతీయ విజ్ఞాన సంస్థ (IISc) బెంగళూరు </a> వారి ప్రాజెక్ట్ కోస్వర, Covid-19 నిర్ధారణ కోసం శ్వాస, దగ్గు మరియు మాటల శబ్దాల ఆధారంగా ఒక విశ్లేషణ విధానం నిర్మించడానికి ఒక ప్రయత్నం. ప్రస్తుతం ఈ ప్రాజెక్ట్ డేటా సేకరణ దశలో ఉంది. ఇది పాల్గొనే వారి నుండి శ్వాస శబ్దాలు, దగ్గు శబ్దాలు, అచ్చు శబ్దాల నిరంతర ఉచ్ఛారణ మరియు అంకెల గణన కోరుతుంది, మరియు రికార్డింగ్ పూర్తి చేయడానికి కేవలం 5-7 నిమిషాల సమయం పడుతుంది. డేటా సేకరణ లో పాల్గొనే వారినుండి వ్యక్తిగతంగా గుర్తించగల ఏ విధమైన సమాచారాన్నీ సేకరించడం లేదు.",
     "tabs.about": "గురించి",
-    "tabs.faq": "ఎఫ్ ఎ క్యూ",
+    "tabs.faq": "ఎఫ్.ఎ.క్యూ",
     "tabs.home": "హోమ్",
     "tabs.media": "మీడియా",
     "tabs.people": "పీపుల్",
     "title.about": "ప్రాజెక్ట్ గురించి",
-    "about.para1": "పదం <b> Coswara </ b> కో (కాంతివలయ నుండి) మరియు Swara (సంస్కృతంలో ధ్వని) సమ్మేళనం. ప్రాజెక్ట్ మూడు దశల్లో సాగుతోంది:",
+    "about.para1": "<b> కోస్వర </ b> అను పదం, కో (కొరోనా నుండి) మరియు స్వర (సంస్కృతంలో ధ్వని) అనే రెండు పదాల సమ్మేళనం. ఈ ప్రాజెక్ట్ మూడు దశల్లో సాగుతోంది:",
     "about.subtitle.data_collection": "వివరాల సేకరణ",
     "about.subtitle.modelling": "మోడలింగ్",
-    "about.subtitle.tool": "డయాగ్నస్టిక్ టూల్",
-    "about.data.para1": "మేము ఆరోగ్యవంతమైన వ్యక్తుల నుండి వాయిస్ నమూనాలను మలినాలు డేటాసెట్ సృష్టించడం గురి, మరియు COVID -19 సంక్రమణ తో ఆ. డేటా ఒక వెబ్ మరియు మొబైల్ అప్లికేషన్ ఉపయోగించి సేకరించబడుతుంది. వాయిస్ నమూనాలను సేకరించిన శ్వాస శబ్దాలు (ఫాస్ట్ మరియు స్లో), దగ్గు శబ్దాలు (లోతైన మరియు గాఢ), నిరంతర అచ్చులు అనేది ఉచ్ఛారణ (/ ఒక / తయారు లో, / i /, / o /) ఉన్నాయి నెమ్మదిగా మరియు వేగంగా, మరియు లెక్కింపు సంఖ్యలు. సేకరించిన మెటాడాటా సమాచారం పాల్గొనే వయసు, లింగము, నగర (దేశం, రాష్ట్రం / ప్రాంతం), ప్రస్తుత ఆరోగ్య స్థితి కలిగి (ఆరోగ్యకరమైన / బహిర్గతం / నయమవుతుంది / సోకిన) మరియు comorbidities (ముందుగా ఉన్న వైద్య పరిస్థితులు) ఉనికిని.",
-    "about.data.para2": "వ్యక్తిగతంగా గుర్తించదగిన సమాచారాన్ని సేకరిస్తారు, మరియు డేటా సేకరణ కంట్రిబ్యూటర్ గోప్యతా గౌరవిస్తుంది. డేటా నిల్వ కూడా సమయంలో అనామకంగా. అన్ని సేకరించిన డేటా అందుబాటులో రోజువారీ ఇక్కడ </a> <a href=\"https://github.com/iiscleap/Coswara-Data\"> అప్డేట్ అవుతుంది.",
-    "about.modelling.para1": "సేకరించిన డేటా సిగ్నల్ ప్రాసెసింగ్ మరియు యంత్ర అభ్యాస పద్ధతులను ఉపయోగించి విశ్లేషించవచ్చు ఉంటుంది. లక్ష్యం వాయిస్ నమూనాలను నుండి "ఇన్ఫెక్షన్ ప్రింట్లు" గుర్తింపు సాయపడతాయి గణిత నమూనాలు నిర్మించడానికి ఉంది. మేము డేటాసెట్ సృష్టించడానికి అయితే ఈ దశలో పని లో పురోగతి ఉంది.",
-    "about.modelling.para2": "మేము కూడా బహిరంగంగా ఒక Github వేదిక ద్వారా ఒక నిర్మాణాత్మక రూపంలో సేకరించిన డేటాసెట్ విడుదల గురి. ఇది త్వరలోనే రియాలిటీ పాయింట్-అఫ్-కేర్ నిర్ధారణ చేయడానికి దోహదం పెద్ద పరిశోధనా సంఘం నుండి పూల్ ప్రయత్నంలో ఉంది.",
-    "about.tool.para1": "మేము ఒక వెబ్ / మొబైల్ అప్లికేషన్ గా నిర్ధారణ సాధనం విడుదల గురి. డేటాసెట్ సృష్టి దశకు ఇలాంటి వాయిస్ నమూనాలను రికార్డింగ్, మరియు వరకు కోసం అప్లికేషన్ అభ్యర్థనలు COVID -19 సంక్రమణ సంభావ్యత సూచించే ఒక స్కోర్ అందిస్తుంది. సాధనం యొక్క చివరి విస్తరణ వైద్య పరిశోధనలను ధ్రువీకరణ, సమర్ధులైన అధికారుల నుంచి అధికార / అనుమతికి లోబడి ఉంటుంది.",
-    "about.tool.para2": "ఈ నిర్ధారణ విధానం యొక్క అత్యంత సరళమైనది మరియు సమర్థవంతమైన ఖర్చు స్వభావం ఇచ్చిన, మేము సాధనం యొక్క ఒక పాక్షిక విజయం మహమ్మారి కోసం రోగ నిర్ధారణ యొక్క మొదటి లైన్ భారీ విస్తరణ మూలానా ఊహాగానములు. సంభావ్య విశ్లేషణ పరికరం రసాయన పరీక్షలకోసం భర్తీ కాదు కానీ కేవలం ఇప్పుడున్న పరీక్షా పద్ధతుల భర్తీ చేస్తాయి.",
+    "about.subtitle.tool": "వ్యాధి నిర్ధారణ సాధనం",
+    "about.data.para1": "మేము ఆరోగ్యవంతమైన వ్యక్తుల నుండి మరియు COVID-19 సంక్రమించిన వ్యక్తుల నుండి స్వర నమూనాలను సేకరించి ఒక డేటాసెట్ రూపొందించదలిచాము. డేటా ఒక వెబ్ మరియు మొబైల్ అప్లికేషన్ ఉపయోగించి సేకరించబడుతుంది. సేకరించదలచిన స్వర నమూనాలు: శ్వాస శబ్దాలు (నెమ్మదిగా మరియు వేగంగా), దగ్గు శబ్దాలు (లోతుగా మరియు లోతుగా), అచ్చుల నిరంతర ఉచ్ఛారణ (/ ఏ /, / ఈ /, / ఊ /), అంకెల గణన (నెమ్మదిగా మరియు వేగంగా). సేకరించదలచిన ఇతర సమాచారం: పాల్గొను వారి వయసు, లింగము, నగరం (దేశం, రాష్ట్రం / ప్రాంతం), ప్రస్తుత ఆరోగ్య స్థితి (ఆరోగ్యకరం / బహిర్గతం / నయమైనది / సోకినది) మరియు కోమోర్బిడిటీస్ (ముందుగా ఉన్న వైద్య పరిస్థితులు).",
+    "about.data.para2": "డేటా సేకరణ లో పాల్గొనే వారినుండి వ్యక్తిగతంగా గుర్తించగల ఏ విధమైన సమాచారాన్నీ సేకరించడం లేదు, మరియు డేటా సేకరణ పాల్గొనే వారి గోప్యతను గౌరవిస్తుంది. డేటా నిల్వ సమయంలోనే అనామకం చేయబడుతుంది. సేకరించిన డేటా రోజువారీ <a href=\"https://github.com/iiscleap/Coswara-Data\">ఇక్కడ </a> అందుబాటులో ఉంచబడుతుంది.",
+    "about.modelling.para1": "సేకరించిన డేటా సిగ్నల్ ప్రాసెసింగ్ మరియు మర ప్రజ్ఞ పద్ధతులను ఉపయోగించి విశ్లేషించబడుతుంది. స్వర నమూనాల నుండి వ్యాధి ని గుర్తించడానికి ఉపయోగపడే "వ్యాధి లక్షణాలు" మర ప్రజ్ఞ ఉపయోగించి గుర్తించడం మా లక్ష్యం. డేటాసెట్ రూపొందించడంతో పాటు ప్రస్తుతం ఈ దశ కూడా సమాంతరంగా పురోగతిలో ఉంది.",
+    "about.modelling.para2": "సేకరించిన డేటాసెట్ బహిరంగంగా Github వేదిక ద్వారా నిర్మాణాత్మక రూపంలో విడుదల చేయదలిచాము. ఇది ఇతర పరిశోధనా బృందాలను భాగస్వాములు చేయడానికి మరియు త్వరితంగా పాయింట్-అఫ్-కేర్ వ్యాధి నిర్ధారణ సాధనం వృద్ధి చేయడానికి దోహదం చేస్తుంది.",
+    "about.tool.para1": "ఈ అధ్యయనం ద్వారా రూపొందించబడిన వ్యాధి నిర్ధారణ విధానం ఒక వెబ్ / మొబైల్ అప్లికేషన్ గా విడుదల చేయదలిచాము. డేటాసెట్ సేకరణ దశ మాదిరిగా ఈ అప్లికేషన్ స్వర నమూనాలను రికార్డు చేయమని కోరుతుంది, మరియు COVID-19 సంక్రమణ సంభావ్యత సూచించే ఒక కొలమానం అందిస్తుంది. సాధనం యొక్క చివరి ఉపయోగం వైద్య పరిశోధనల ధ్రువీకరణ, మరియు సంబంధిత అధికారుల అనుమతికి లోబడి ఉంటుంది.",
+    "about.tool.para2": "ఈ తరహా వ్యాధి నిర్ధారణ విధానం అత్యంత సరళమైనది మరియు తక్కువ ఖర్చు తో కూడుకున్నది, ఈ విధానం పాక్షికంగా విజయమైనా మహమ్మారి రోగ నిర్ధారణ కోసం ఒక ప్రాథమిక నిర్ధారణ విధానం గా ఉపయోగించడానికి దోహదం చేస్తుంది. ఈ అధ్యయనం ద్వారా రూపొందించబడిన వ్యాధి నిర్ధారణ విధానం రసాయన పరీక్షలకు ప్రత్యామ్నాయం కాదు, కేవలం వాటికి సహాయకంగా పని ఉపయోగించడానికి ఉద్దేశించినది.",
     "media.title": "వార్తల్లో",
-    "media.content": "మేము మా పరిశోధన ప్రచారం మరియు నిశ్చయముగా డేటా సేకరణ పెంపొందించడంలో మీడియా సహాయాన్ని మేము అభినందిస్తున్నాము.",
-    "team.title": "జట్టు కలిసే",
+    "media.content": "మా పరిశోధన ప్రచారం మరియు డేటా సేకరణ లో మీడియా సహకారాన్ని మేము అభినందిస్తున్నాము.",
+    "team.title": "పరిశోధన బృందం",
     "name.sriram": "డాక్టర్ శ్రీరామ్ గణపతి",
     "name.pkg": "డాక్టర్ ప్రశాంత కుమార్ ఘోష్",
     "name.anand": "ఆనంద్ మోహన్",
-    "name.anuroop": "Anuroop అయ్యంగార్",
+    "name.anuroop": "అనురూప్ అయ్యంగార్",
     "name.neeraj": "డాక్టర్ నీరజ్ శర్మ",
     "name.prashant": "ప్రశాంత్ కృష్ణన్",
-    "name.nirmala": "డాక్టర్ R నిర్మలా",
-    "name.raksheet": "Raksheet భట్",
+    "name.nirmala": "డాక్టర్ R. నిర్మలా",
+    "name.raksheet": "రక్షీత్ భట్",
     "name.shahbaz": "షాబాజ్ సుల్తాన్",
     "name.shreyas": "శ్రేయాస్ రామోజీ",
-    "name.srikanth": "శ్రీకాంత్ రాజ్ Chetupalli",
-    "place.iisc": "IISc బెంగుళూర్",
-    "place.cmu": "CMU, USA",
+    "name.srikanth": "శ్రీకాంత్ రాజ్ చెటుపల్లి",
+    "place.iisc": "భా.వి.సం. బెంగళూరు",
+    "place.cmu": "సి.ఎం.యూ., యూ.ఎస్.ఏ",
     "place.cogknit": "Cogknit సెమాంటిక్స్",
     "place.upgrad": "upGrad",
     "team.title.asst_prof": "సహాయ ఆచార్యులు",
-    "team.title.assoc_prof": "సహ ప్రాచార్యుడు",
-    "team.title.ceo": "సియిఒ",
+    "team.title.assoc_prof": "సహ ప్రాచార్యులు",
+    "team.title.ceo": "సి.ఈ.ఒ",
     "team.title.ra": "పరిశోధన సహాయకుడు",
-    "team.title.mtech_ai": "MTech (ఆర్టిఫిషియల్ ఇంటెలిజెన్స్)",
+    "team.title.mtech_ai": "M. Tech (ఆర్టిఫిషియల్ ఇంటెలిజెన్స్)",
     "team.title.post_doc": "పోస్ట్ డాక్టోరల్ ఫెలో",
     "team.title.mo": "మెడికల్ ఆఫీసర్",
     "team.title.sde": "సాఫ్ట్వేర్ ఇంజనీర్",
-    "team.title.phd": "పీహెచ్డీ స్కాలర్",
-    "team.areas.sriram": "స్పీచ్ రికగ్నిషన్, డీప్ నేర్చుకోవడం, న్యూరోసైన్స్",
-    "team.areas.pkg": "స్పీచ్ ఉత్పత్తి, భావప్రకటన, స్పీచ్ డిజార్డర్స్",
-    "team.areas.anand": "మాటలు గుర్తుపట్టుట",
-    "team.areas.neeraj": "శ్రవణ న్యూరోసైన్స్, సిగ్నల్ ప్రాసెసింగ్",
+    "team.title.phd": "పీ.హెచ్.డి. స్కాలర్",
+    "team.areas.sriram": "స్పీచ్ రికగ్నిషన్, డీప్ లెర్నింగ్, న్యూరోసైన్స్",
+    "team.areas.pkg": "స్పీచ్ ప్రొడక్షన్, ఆర్టిక్యూలేషన్, స్పీచ్ డిజార్డర్స్",
+    "team.areas.anand": "స్పీచ్ రికగ్నిషన్",
+    "team.areas.neeraj": "ఆడిటరీ న్యూరోసైన్స్, సిగ్నల్ ప్రాసెసింగ్",
     "team.areas.prashant": "స్పీకర్ రికగ్నిషన్",
     "team.areas.shreyas": "స్పీకర్ రికగ్నిషన్, మెషిన్ లెర్నింగ్",
     "team.areas.srikanth": "సిగ్నల్ ప్రాసెసింగ్, స్పీచ్ రికగ్నిషన్"
