--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -96,7 +96,7 @@
 	"record.button.cancel": "Cancel",
 	"thanks.heading": "Thank you for your participation!",
 	"thanks.message.para1": "Thank you for being a part of this! Please share it among your friends and relatives.",
-	"thanks.message.para2": "Follow us at <a href='https://www.facebook.com/coswara.iisc'>Facebook</a> and <a href='https://twitter.com/coswara_iisc'>Twitter</a> to get the latest updates.",
+	"thanks.message.para2": "Follow us at <a href='https://www.facebook.com/coswara.iisc'>Facebook</a> and <a href='https://twitter.com/coswara_iisc'>Twitter</a> to get the latest updates. Please save the below id for any communication.",
 	"thanks.button.start_new_session": "Start a new session",
 	"thanks.warning.reuse": "The recording device should not be shared with others before cleaning/sanitation.",
 	"thanks.developed_by": "Developed by",
