--- a/projects/collect/src/assets/i18n/en-US.json
+++ b/projects/collect/src/assets/i18n/en-US.json
@@ -44,6 +44,7 @@
 	"forms.options.no": "No",
 	"forms.option.positive_mild": "I have been identified with Covid-19 and have mild symptoms",
 	"forms.option.positive_moderate": "I have been identified with Covid-19 and have moderately severe symptoms",
+	"forms.option.positive_asymp": "I have been identified with Covid-19 and am asymptomatic",
 	"forms.option.recovered_full": "I was identified with Covid-19 and have recovered fully",
 	"forms.option.resp_illness_not_identified": "I have other pre-existing respiratory illnesses but have not been identified with Covid-19",
 	"forms.option.no_resp_illness_exposed": "I have no respiratory illness but I may have been exposed to the virus through contact",
