--- a/src/assets/i18n/ta-IN.json
+++ b/src/assets/i18n/ta-IN.json
@@ -11,7 +11,7 @@
     "language.bengali": "বাংলা",
     "home.button.read": "மேலும் படிக்க",
     "home.button.record": "தரவுப் பதிவுசெய்வதை தொடரவும்",
-    "home.content": "அறிவியல் <a href=\"https://www.iisc.ac.in\" target=\"_blank\"> மேலும் இந்திய நிறுவனத்தினால் திட்ட Coswara (ஐஐஎஸ்சி) பெங்களூர் </a> Covid 19 கண்டறியும் கருவி உருவாக்க ஒரு முயற்சியாகும் சுவாச, இருமல் மற்றும் பேச்சு ஒலிகள் அடிப்படையில். திட்டம் இப்போது தரவு சேகரிப்பு நிலையில் உள்ளது. அது மூச்சு ஒலிகள், இருமல் ஒலிகள், உயிர் சத்தங்களை நீடித்த phonation உங்கள் நேரம் சுற்றி 5-7 நிமிடங்கள் எடுக்கும் ஒரு கவுண்டிங் உடற்பயிற்சி ஒரு பதிவு வழங்க பங்கேற்பாளர்கள் தேவைப்படுகிறது. தனிப்பட்ட முறையில் அடையாளப்படுத்தும் தரவு பங்கேற்பாளர்கள் இருந்து சேகரிக்கப்பட்டுள்ளன.",
+    "home.content": "அறிவியல் <a href=\"https://www.iisc.ac.in\" target=\"_blank\"> மேலும் இந்திய நிறுவனத்தினால் திட்ட Coswara (ஐஐஎஸ்சி) பெங்களூர் </a> Covid 19 கண்டறியும் கருவி உருவாக்க ஒரு முயற்சியாகும் சுவாச, இருமல் மற்றும் பேச்சு ஒலிகள் அடிப்படையில். திட்டம் இப்போது தரவு சேகரிப்பு நிலையில் உள்ளது. அது மூச்சு ஒலிகள், இருமல் ஒலிகள், உயிர் சத்தங்களை நீடித்த phonation உங்கள் நேரம் சுமார் 5-7 நிமிடங்கள் எடுக்கும். ஒரு கவுண்டிங் உடற்பயிற்சி ஒரு பதிவு வழங்க பங்கேற்பாளர்கள் தேவைப்படுகிறது. தனிப்பட்ட முறையில் அடையாளப்படுத்தும் தரவு பங்கேற்பாளர்கள் இருந்து சேகரிக்கப்பட்டுள்ளன.",
     "tabs.about": "பற்றி",
     "tabs.faq": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
     "tabs.home": "வீடு",
@@ -40,7 +40,7 @@
     "name.nirmala": "டாக்டர் ஆர் நிர்மலா",
     "name.raksheet": "Raksheet பட்",
     "name.shahbaz": "ஷாபாஸ் சுல்தான்",
-    "name.shreyas": "ஸ்ரேயாஸ் ராமோஜி",
+    "name.shreyas": "ஸ்ரேயஸ் ராமோஜி",
     "name.srikanth": "ஸ்ரீகாந்த் ராஜ் Chetupalli",
     "place.iisc": "ஐஐஎஸ்சி பெங்களூருவில்",
     "place.cmu": "சீ.எம்.யூ, அமெரிக்கா",
